--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </p>
   </div>
   <div class="about-img">
-    <img src="file:///C:/Users/SENAI/Downloads/WhatsApp%20Image%202025-06-11%20at%2019.31.16.jpeg" alt="Equipe trabalhando em porcelanato" />
+    <img src="imagem/img.jfif" alt="Equipe trabalhando em porcelanato" />
   </div>
 </section>
 
